Resolve Java Glazed Lists inspection warnings